Ejercicios del 2-6 del Lab4 en HTML y JS

--- a/css/Laboratorio1.css
+++ b/css/Laboratorio1.css
@@ -1,3 +1,5 @@
+/*ESTE ES EL LABORATORIO 3 APLICADO AL LABORATORIO 1*/
+
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
