Correción de la referencia a app.js

--- a/views/main.pug
+++ b/views/main.pug
@@ -54,4 +54,4 @@ html
           | . Licencia 
           a(href="https://opensource.org/license/mit") MIT
     
-    script(src="/app_lab12.js")
+    script(src="/app.js")
