Creación del modelo que interactua con la tabla labs en la DB y creación de la vista que muestrea la información de los labos

--- a/views/labs.pug
+++ b/views/labs.pug
@@ -1,61 +1,35 @@
 extends main.pug
 
-block styles
-  style.
-    .labs-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-    }
-    .lab-card {
-      flex: 0 1 calc(25% - 1rem);
-      min-width: 250px;
-      max-width: 300px;
-      margin: 0.5rem;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .lab-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    @media (max-width: 1200px) {
-      .lab-card {
-        flex: 0 1 calc(33.333% - 1rem);
-      }
-    }
-    @media (max-width: 900px) {
-      .lab-card {
-        flex: 0 1 calc(50% - 1rem);
-      }
-    }
-    @media (max-width: 600px) {
-      .lab-card {
-        flex: 0 1 100%;
-        max-width: 100%;
-      }
-    }
-
 block content
-  div.container
-    h1.title.center-align= lab.title
-    p.subtitle.center-align= lab.description
+  div(class="container has-text-centered")
+    h1(class="title is-1 has-text-white")= lab.title
+    p(class="subtitle is-4 has-text-white")= lab.description
     
-    div.card
-      div.card-content
-        h2 Detalles del Laboratorio
-        table.table
+    div(class="box has-background-dark has-text-white mt-5")
+      h2(class="title is-4 has-text-white") Detalles del Laboratorio
+      
+      table(class="table is-fullwidth has-background-dark has-text-white")
+        tbody
           tr
-            th ID
-            td= lab.id
+            th(class="has-text-white") ID
+            td(class="has-text-white")= lab.id
           tr
-            th Título
-            td= lab.title
+            th(class="has-text-white") Título
+            td(class="has-text-white")= lab.title
           tr
-            th Descripción
-            td= lab.description 
+            th(class="has-text-white") Descripción
+            td(class="has-text-white")= lab.description 
     
-    div.center-align.mt-4
-      // Use view route with correct lab ID
-      a(href=`/labs/${lab.id}/view`).button.filled.primary Ver Laboratorio Completo
-      a(href="/labs").button.outlined.secondary Volver al Inicio
+    div(class="buttons is-centered mt-5")
+      a(href=`/labs/${lab.id}/view` class="button is-primary is-large")
+        span(class="icon")
+          i(class="fas fa-eye")
+        span Ver Laboratorio
+      
+      a(href="/" class="button is-light")
+        span(class="icon")
+          i(class="fas fa-arrow-left")
+        span Volver al Inicio
+      
+    div(class="has-text-centered mt-4")
+      p(class="is-size-7 has-text-grey-light") Ruta del archivo: #{lab.relative_path}
