--- a/views/404.pug
+++ b/views/404.pug
@@ -1,7 +1,13 @@
 extends main.pug
 
 block content
-  div.container.center-align
-    h1.title 404 - Página no encontrada
-    p.subtitle= message
-    a(href="/labs").button.filled.primary Volver a Inicio
+  div(class="container has-text-centered")
+    div(class="section")
+      h1(class="title is-1 has-text-white") 404 - Página no encontrada
+      p(class="subtitle is-3 has-text-white")= message
+      
+      div(class="mt-6")
+        a(href="/" class="button is-primary is-large")
+          span(class="icon")
+            i(class="fas fa-home")
+          span Volver a Inicio
