Cambio en la vista de registro

--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -6,7 +6,7 @@ block content
       div(class="column is-half")
         div(class="box has-background-dark has-text-white")
           h2(class="title is-2 has-text-white") Registro en Marel's
-          p(class="subtitle is-4 has-text-white") Crea una cuenta para acceder a laboratorios y archivos
+          p(class="subtitle is-4 has-text-white") Crea una cuenta para acceder a Marel's
           
           if error
             div(class="notification is-danger mt-4")
